# todo-fp

./: README.md  pyproject.toml
src/todo_fp/: adapters.py  domains.py  dtos.py  main.py  repositories.py  schemas.py  services.py  uow.py
