[tool.poetry]
name = "todo-fp"
version = "0.1.0"
description = "Todo API Backend in Functional Programming way"
authors = ["Hansaem Woo <me@felis.kr>"]
readme = "README.md"
packages = [{ include = "todo_fp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
returns = "^0.19.0"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.2.3"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"
devtools = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
